infrastructure/instances/longhorn/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  type: ClusterIP
  selector:
    app: longhorn-ui
  ports:
    - port: 8002
      targetPort: 8000
