infrastructure/instances/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: auth-oauth2-proxy@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - longhorn.tazlab.net
      secretName: wildcard-tls
  rules:
    - host: longhorn.tazlab.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn
                port:
                  number: 8002
