infrastructure/instances/longhorn/tailnet-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-tailnet
  namespace: longhorn-system
  annotations:
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"
    tailscale.com/tags: "tag:internal-apps"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - longhorn
  defaultBackend:
    service:
      name: longhorn
      port:
        number: 8002
